--- a/config.toml
+++ b/config.toml
@@ -8,3 +8,27 @@ custom_js = ["js/custom.js"]
 
 [markup.goldmark.renderer]
 unsafe = true
+
+[menu]
+  [[menu.main]]
+    identifier = "main"
+    name = "Главная"
+    url = "/"
+    weight = 1
+  [[menu.main]]
+    identifier = "filosofskyi_kamen"
+    name = "Философский камень"
+    url = "/books/filosofskyi_kamen/"
+    weight = 2
+  [[menu.main]]
+    identifier = "part1"
+    name = "Часть 1"
+    url = "/books/filosofskyi_kamen/part1/"
+    parent = "filosofskyi_kamen"
+    weight = 1
+  [[menu.main]]
+    identifier = "part2"
+    name = "Часть 2"
+    url = "/books/filosofskyi_kamen/part2/"
+    parent = "filosofskyi_kamen"
+    weight = 2
