--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://harry-pot.web.app/"
 languageCode = "ru-RU"
 title = "Гарри и вагон косяков"
 
@@ -21,14 +21,25 @@ unsafe = true
     url = "/books/filosofskyi_kamen/"
     weight = 2
   [[menu.main]]
-    identifier = "part1"
+    identifier = "filosofskyi_kamen_part1"
     name = "Часть 1"
     url = "/books/filosofskyi_kamen/part1/"
     parent = "filosofskyi_kamen"
     weight = 1
   [[menu.main]]
-    identifier = "part2"
+    identifier = "filosofskyi_kamen_part2"
     name = "Часть 2"
     url = "/books/filosofskyi_kamen/part2/"
     parent = "filosofskyi_kamen"
     weight = 2
+  [[menu.main]]
+    identifier = "taynaya_komnata"
+    name = "Тайная комната"
+    url = "/books/taynaya_komnata/"
+    weight = 5
+  [[menu.main]]
+    identifier = "taynaya_komnata_part1"
+    name = "Часть 1"
+    url = "/books/taynaya_komnata/part1/"
+    parent = "taynaya_komnata"
+    weight = 1
