--- a/config.toml
+++ b/config.toml
@@ -56,3 +56,20 @@ unsafe = true
     url = "/books/uznik_azkabana/part1/"
     parent = "uznik_azkabana"
     weight = 1
+  [[menu.main]]
+    identifier = "uznik_azkabana_part2"
+    name = "Часть 1"
+    url = "/books/uznik_azkabana/part2/"
+    parent = "uznik_azkabana"
+    weight = 2
+  [[menu.main]]
+    identifier = "kubok_ognya"
+    name = "Кубок огня"
+    url = "/books/kubok_ognya/"
+    weight = 4
+  [[menu.main]]
+    identifier = "kubok_ognya_part1"
+    name = "Часть 1"
+    url = "/books/kubok_ognya/part1/"
+    parent = "kubok_ognya"
+    weight = 1
