--- a/config.toml
+++ b/config.toml
@@ -32,7 +32,7 @@ unsafe = true
     identifier = "taynaya_komnata"
     name = "Тайная комната"
     url = "/books/taynaya_komnata/"
-    weight = 5
+    weight = 2
   [[menu.main]]
     identifier = "taynaya_komnata_part1"
     name = "Часть 1"
@@ -73,3 +73,9 @@ unsafe = true
     url = "/books/kubok_ognya/part1/"
     parent = "kubok_ognya"
     weight = 1
+  [[menu.main]]
+    identifier = "kubok_ognya_part2"
+    name = "Часть 2"
+    url = "/books/kubok_ognya/part2/"
+    parent = "kubok_ognya"
+    weight = 2
