--- a/config.toml
+++ b/config.toml
@@ -136,3 +136,9 @@ unsafe = true
     url = "/books/dary_smerti/part1/"
     parent = "dary_smerti"
     weight = 1
+  [[menu.main]]
+    identifier = "dary_smerti_part2"
+    name = "Часть 2"
+    url = "/books/dary_smerti/part2/"
+    parent = "dary_smert2"
+    weight = 2
