--- a/config.toml
+++ b/config.toml
@@ -58,7 +58,7 @@ unsafe = true
     weight = 1
   [[menu.main]]
     identifier = "uznik_azkabana_part2"
-    name = "Часть 1"
+    name = "Часть 2"
     url = "/books/uznik_azkabana/part2/"
     parent = "uznik_azkabana"
     weight = 2
@@ -129,7 +129,7 @@ unsafe = true
     identifier = "dary_smerti"
     name = "Дары смерти"
     url = "/books/dary_smerti/"
-    weight = 7
+    weight = 8
   [[menu.main]]
     identifier = "dary_smerti_part1"
     name = "Часть 1"
@@ -140,5 +140,5 @@ unsafe = true
     identifier = "dary_smerti_part2"
     name = "Часть 2"
     url = "/books/dary_smerti/part2/"
-    parent = "dary_smert2"
+    parent = "dary_smerti"
     weight = 2
