--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://harry-pot.web.app/"
+baseURL = "https://harrypot.lol/"
 languageCode = "ru-RU"
 title = "Гарри и вагон косяков"
 enableRobotsTXT = true
