--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,21 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "headers": [{
+      "source": "**/*.@(jpg|jpeg|gif|png|css|js)",
+      "headers": [{
+        "key": "Cache-Control",
+        "value": "max-age=15552000"
+      }]
+    }, {
+      "source": "404.html",
+      "headers": [{
+        "key": "Cache-Control",
+        "value": "max-age=15552000"
+      }]
+    }],
+    "cleanUrls": true,
+    "trailingSlash": false
   }
 }
