--- a/firebase.json
+++ b/firebase.json
@@ -7,7 +7,7 @@
       "**/node_modules/**"
     ],
     "headers": [{
-      "source": "**/*.@(jpg|jpeg|gif|png|css|js)",
+      "source": "**/*.@(jpg|jpeg|gif|png|css|js|svg|ttf|woff2|webp|eot|woff)",
       "headers": [{
         "key": "Cache-Control",
         "value": "max-age=15552000"
